fix: Add comments and refactor code to make it more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h6 {
     z-index: 1;
 }
 
-/*logo*/
+/*Logo and navigation bar*/
 
 #logo {
     float: left;
@@ -84,7 +84,6 @@ h6 {
     margin-top: auto;
     padding-top: 90px;
     position: relative;
-
 }
 
 #hero-image {
@@ -94,7 +93,7 @@ h6 {
     z-index: 2;
     background-size: auto;
 
-
+    /*Animation for the hero image*/
 
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -112,7 +111,7 @@ h6 {
 /* Hero Image Animation */
 @keyframes hero-zoom {
     from {
-        transform: scale(1)
+        transform: scale(1);
     }
 
     to {
@@ -218,8 +217,6 @@ h6 {
     padding-bottom: 25px;
 }
 
-
-
 /* Paragraph class rules */
 .float-center-paragraph {
     width: 75%;
@@ -322,10 +319,10 @@ table td {
     width: 100%;
     text-align: center;
     padding: 25px;
-    text-decoration: underline; 
+    text-decoration: underline;
 }
 
-#contact-section-big-div {
+#contact-section-wrapper {
     width: 100%;
     margin-top: 25px;
     margin-bottom: 25px;
